Add Configuring page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ pages:
 - [contributing.md, Contributing]
 - [indicators.md, Indicators]
 - [releases.md, Releases]
+- [configuring.md, Configuring]
 - [running.md, Running]
 - [reporting.md, Reporting]
 - [donating.md, Donating]
