Initial incomplete webconfigure tool

--- a/config.ini
+++ b/config.ini
@@ -40,7 +40,7 @@
     Backup Count = 7
     Path = ./recorded
     Trader File Name = trader.log
-    Simulator File Name = trader.log
+    Simulator File Name = simulator.log
   [[Pushover]]
     Simulator = False
     Trader = False
