Revert to old Trade Indicators format:
ConfigObj can keep a nested list format immediately after writing,
but not after re-opening the file. Validate checks malform the nested
list, so treating them as strings and using ast seems like a decent solution.

This will be simplified in webconfigure.py with checkboxes, and then converting
the list to a string.

--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@
   Enabled = False
   Verbose = True
   # All of the following is also used by Simulator
-  Trade Indicators = EMA
+  Trade Indicators = ['EMA']
   Verbose Indicators = stub
   Advanced Strategy = Default
   Trade Volume = 99
