okcoin: WebSocketAPI: regularly test connection
Websocket will remain open, but a ping event won't get a pong back and no new ticker data is received. This adds new configurables and regularly checks the connection with a ping.

--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,10 @@
   API Key = stub
   Secret Key = stub
   Asset Trade Minimum = 0.01
+  # How often should we test the connection? The default typically updates ~10 seconds.
+  Connection Test Runs = 15
+  # How long in seconds should the ticker wait if a reconnection must be made?
+  Reconnect Wait = 12
 
 [Candles]
   Verbose = True
