--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@
   Secret Key = stub
   Asset Trade Minimum = 0.01
   # How often should we test the connection? The default typically updates ~10 seconds.
-  Connection Test Runs = 25
+  Connection Test Interval = 25
   # How long in seconds should the ticker wait if a reconnection must be made?
   Reconnect Wait = 12
 
