Candle Size Scaler for Aggregation
Makes aggregation easier. Adapted from @aehaynes commits:
https://github.com/aehaynes/avarice/commit/fa76b357d9473c1f752d5909893247f6179fe3e2
https://github.com/aehaynes/avarice/commit/b1dd699d7abc25de2b7edb37a64a9c05e0378b18
https://github.com/aehaynes/avarice/commit/80c1be228758ec32756e3451620944244a91c612

--- a/config.ini
+++ b/config.ini
@@ -93,6 +93,7 @@
   [[SMA]]
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Short Period = 15
     Long Period = 50
     Diff Down = -0.025
@@ -106,6 +107,7 @@
   [[EMA]]
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Short Period = 10
     Long Period = 21
     Diff Down = -0.025
@@ -120,6 +122,7 @@
     # Uses both EMA's Long Period and ShortPeriod from above
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Diff Down = -0.025
     Diff Up = 0.025
     [[[Trader]]]
@@ -129,6 +132,7 @@
       Trade Delay = 3
 
   [[EMAwbic]]
+    Candle Size Multiplier = 1
     Period = 60
     # Buy when price is <Bid % of EMA
     Bid = -75
@@ -142,6 +146,7 @@
 
   [[FRAMA]]
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Short Period = 10
     Long Period = 21
     Alpha Constant = -4.6
@@ -157,6 +162,7 @@
     # Mike Bruns' agressive 3/11/16 are also recommended
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Short Period = 12
     Long Period = 26
     Signal Period = 9
@@ -172,6 +178,7 @@
     # Uses MACD's Long, Short, and Signal values
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Signal Period = 9
     Diff Down = -0.1
     Diff Up = 0.1
@@ -185,6 +192,7 @@
   [[RSI]]
     # Period can never be less than 3, but 14
     # or higher is generally recommended.
+    Candle Size Multiplier = 1
     Period = 14
     Ask = 70
     Bid = 30
@@ -230,6 +238,7 @@
       Trade Delay = 3
 
   [[Fast Stochastic %K]]
+    Candle Size Multiplier = 1
     Period = 14
     Ask = 95
     Bid = 5
@@ -264,6 +273,7 @@
   [[KDJ]]
     # We support both CD and Diff (off J) Indicator Strategies
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Fast K Period = 9
     Full K Period = 3
     Full D Period = 3
@@ -279,6 +289,7 @@
     # We support both CD (when Aroon is > or < 0) and Diff (off bid/ask)
     # This is because zero line is where AroonUp and AroonDown converge/diverge
     Indicator Strategy = CD
+    Candle Size Multiplier = 1
     Period = 25
     Bid = -90
     Ask = 90
@@ -291,6 +302,7 @@
   [[Ichimoku]]
     # Check galts-gulch.io/avarice/indicators for info on supported strategies.
     Indicator Strategy = Optimized
+    Candle Size Multiplier = 1
     Tenkan-Sen Period = 9
     # Only used on Span B since SpanA just uses Tenkan-sen and Kijnun-sen.
     # Default is 2 * Kijun-Sen Period
@@ -305,11 +317,13 @@
       Trade Delay = 3
 
   [[Standard Deviation]]
+    Candle Size Multiplier = 1
     Volatility Threshold Over = True
     Period = 10
     Threshold = 0.4
 
   [[Bollinger Bands]]
+    Candle Size Multiplier = 1
     Period = 20
 
   [[Bollinger Bandwidth]]
@@ -326,6 +340,7 @@
   [[Chandelier Exit]]
     # We require running long enough for price to pass Short or Long exits before
     # determining which trend line to use.
+    Candle Size Multiplier = 1
     Period = 22
     Multiplier = 3
     [[[Trader]]]
@@ -348,6 +363,7 @@
       Trade Delay = 3
 
   [[Simple Rate of Change]]
+    Candle Size Multiplier = 1
     Period = 12
     [[[Trader]]]
       Trade Volume = 99
