--- a/config.ini
+++ b/config.ini
@@ -335,6 +335,7 @@
 
   [[Average True Range]]
     Volatility Threshold Over = True
+    Candle Size Multiplier = 1
     Period = 14
     Threshold = 10
 
