DMI/ADX: cleanup, simplify, fix, add pure DI strategy

--- a/config.ini
+++ b/config.ini
@@ -353,9 +353,11 @@
   [[Directional Movement Index]]
     # Uses ATR period.
     # 'Full' uses ADX threshold, and +DI -DI crossovers to determine signal.
+    # 'DI' uses +DI -DI crossovers to determine signal
     # 'Volatility' only uses threshold with ADX as a volatility indicator (must be combined).
     Indicator Strategy = Volatility
     Volatility Threshold Over = True
+    # ADX Threshold for 'Volatility' or 'Full' Indicator Strategies
     Threshold = 20
     [[[Trader]]]
       Trade Volume = 99
