Expand a few indicator aliases

--- a/config.ini
+++ b/config.ini
@@ -90,7 +90,7 @@
   # All indicators below are fully documented in
   # http://galts-gulch.github.io/avarice/indicators
 
-  [[SMA]]
+  [[Simple Movement Average]]
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
     Candle Size Multiplier = 1
@@ -104,7 +104,7 @@
       Trade Persist = False
       Trade Delay = 3
 
-  [[EMA]]
+  [[Exponential Movement Average]]
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
     Candle Size Multiplier = 1
@@ -118,7 +118,7 @@
       Trade Persist = False
       Trade Delay = 3
 
-  [[DEMA]]
+  [[Double Exponential Movement Average]]
     # Uses both EMA's Long Period and ShortPeriod from above
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
@@ -144,7 +144,7 @@
       Trade Persist = False
       Trade Delay = 3
 
-  [[FRAMA]]
+  [[Fractal Adaptive Movement Average]]
     Indicator Strategy = CD
     Candle Size Multiplier = 1
     Short Period = 10
