config: new TODO

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,7 @@
   Verbose = True
   # All of the following is also used by Simulator
   Trade Indicators = ['EMA']
+  # TODO: use a verbose boolean in [Indicators][[Indicator]]. EMA verbose broken.
   Verbose Indicators = stub
   Advanced Strategy = Default
   Trade Volume = 99
