Make indicator verbosity boolean and simplify

--- a/config.ini
+++ b/config.ini
@@ -21,8 +21,6 @@
   Verbose = True
   # All of the following is also used by Simulator
   Trade Indicators = ['EMA']
-  # TODO: use a verbose boolean in [Indicators][[Indicator]]. EMA verbose broken.
-  Verbose Indicators = stub
   Advanced Strategy = Default
   Trade Volume = 99
   Single Trade = True
@@ -92,6 +90,7 @@
   # http://galts-gulch.github.io/avarice/indicators
 
   [[Simple Movement Average]]
+    Verbose = False
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
     Candle Size Multiplier = 1
@@ -106,6 +105,7 @@
       Trade Delay = 3
 
   [[Exponential Movement Average]]
+    Verbose = False
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
     Candle Size Multiplier = 1
@@ -120,6 +120,7 @@
       Trade Delay = 3
 
   [[Double Exponential Movement Average]]
+    Verbose = False
     # Uses both EMA's Long Period and ShortPeriod from above
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
@@ -133,6 +134,7 @@
       Trade Delay = 3
 
   [[EMAwbic]]
+    Verbose = False
     Candle Size Multiplier = 1
     Period = 60
     # Buy when price is <Bid % of EMA
@@ -146,6 +148,7 @@
       Trade Delay = 3
 
   [[Fractal Adaptive Movement Average]]
+    Verbose = False
     Indicator Strategy = CD
     Candle Size Multiplier = 1
     Short Period = 10
@@ -160,6 +163,7 @@
       Trade Delay = 3
 
   [[MACD]]
+    Verbose = False
     # Mike Bruns' agressive 3/11/16 are also recommended
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
@@ -176,6 +180,7 @@
       Trade Delay = 3
 
   [[DMACD]]
+    Verbose = False
     # Uses MACD's Long, Short, and Signal values
     # We support both CD and Diff Indicator Strategies
     Indicator Strategy = CD
@@ -191,6 +196,7 @@
 
 
   [[RSI]]
+    Verbose = False
     # Period can never be less than 3, but 14
     # or higher is generally recommended.
     Candle Size Multiplier = 1
@@ -204,6 +210,7 @@
       Trade Delay = 3
 
   [[Fast Stochastic RSI %K]]
+    Verbose = False
     # %D uses %K periods, %D periods are SMA periods of %K
     Period = 3
     Ask = 80
@@ -215,6 +222,7 @@
       Trade Delay = 3
 
   [[Fast Stochastic RSI %D]]
+    Verbose = False
     # %D uses %K periods, %D periods are SMA periods of %K
     Period = 3
     Ask = 80
@@ -226,6 +234,7 @@
       Trade Delay = 3
 
   [[Full Stochastic RSI %D]]
+    Verbose = False
     # Full %D uses Fast %D periods, Full %D periods are SMA periods of Fast %D
     # We support both CD and Diff (standard) Indicator Strategies
     Indicator Strategy = Diff
@@ -239,6 +248,7 @@
       Trade Delay = 3
 
   [[Fast Stochastic %K]]
+    Verbose = False
     Candle Size Multiplier = 1
     Period = 14
     Ask = 95
@@ -250,6 +260,7 @@
       Trade Delay = 3
 
   [[Fast Stochastic %D]]
+    Verbose = False
     # %D uses %K periods, %D periods are SMA periods of %K
     Period = 3
     Ask = 80
@@ -261,6 +272,7 @@
       Trade Delay = 3
 
   [[Full Stochastic %D]]
+    Verbose = False
     # Full %D uses Fast %D periods, Full %D periods are SMA periods of Fast %D
     Period = 3
     Ask = 80
@@ -272,6 +284,7 @@
       Trade Delay = 3
 
   [[KDJ]]
+    Verbose = False
     # We support both CD and Diff (off J) Indicator Strategies
     Indicator Strategy = CD
     Candle Size Multiplier = 1
@@ -287,6 +300,7 @@
       Trade Delay = 3
 
   [[Aroon]]
+    Verbose = False
     # We support both CD (when Aroon is > or < 0) and Diff (off bid/ask)
     # This is because zero line is where AroonUp and AroonDown converge/diverge
     Indicator Strategy = CD
@@ -301,6 +315,7 @@
       Trade Delay = 3
 
   [[Ichimoku]]
+    Verbose = False
     # Check galts-gulch.io/avarice/indicators for info on supported strategies.
     Indicator Strategy = Optimized
     Candle Size Multiplier = 1
@@ -318,28 +333,33 @@
       Trade Delay = 3
 
   [[Standard Deviation]]
+    Verbose = False
     Candle Size Multiplier = 1
     Volatility Threshold Over = True
     Period = 10
     Threshold = 0.4
 
   [[Bollinger Bands]]
+    Verbose = False
     Candle Size Multiplier = 1
     Period = 20
 
   [[Bollinger Bandwidth]]
+    Verbose = False
     # Uses Bollinger Bands Period. Threshold should be adjusted based on
     # Candle Size and intended use.
     Volatility Threshold Over = True
     Threshold = 1
 
   [[Average True Range]]
+    Verbose = False
     Volatility Threshold Over = True
     Candle Size Multiplier = 1
     Period = 14
     Threshold = 10
 
   [[Chandelier Exit]]
+    Verbose = False
     # We require running long enough for price to pass Short or Long exits before
     # determining which trend line to use.
     Candle Size Multiplier = 1
@@ -352,6 +372,7 @@
       Trade Delay = 3
 
   [[Directional Movement Index]]
+    Verbose = False
     # Uses ATR period.
     # 'Full' uses ADX threshold, and +DI -DI crossovers to determine signal.
     # 'DI' uses +DI -DI crossovers to determine signal
@@ -367,6 +388,7 @@
       Trade Delay = 3
 
   [[Simple Rate of Change]]
+    Verbose = False
     Candle Size Multiplier = 1
     Period = 12
     [[[Trader]]]
