CD => Convergence/Divergence

--- a/config.ini
+++ b/config.ini
@@ -92,8 +92,8 @@
 
   [[Simple Movement Average]]
     Verbose = False
-    # We support both CD and Diff Indicator Strategies
-    Indicator Strategy = CD
+    # We support both Convergence/Divergence and Diff Indicator Strategies
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Short Period = 15
     Long Period = 50
@@ -107,8 +107,8 @@
 
   [[Exponential Movement Average]]
     Verbose = False
-    # We support both CD and Diff Indicator Strategies
-    Indicator Strategy = CD
+    # We support both Convergence/Divergence and Diff Indicator Strategies
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Short Period = 10
     Long Period = 21
@@ -123,8 +123,8 @@
   [[Double Exponential Movement Average]]
     Verbose = False
     # Uses both EMA's Long Period and ShortPeriod from above
-    # We support both CD and Diff Indicator Strategies
-    Indicator Strategy = CD
+    # We support both Convergence/Divergence and Diff Indicator Strategies
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Diff Down = -0.025
     Diff Up = 0.025
@@ -150,7 +150,7 @@
 
   [[Fractal Adaptive Movement Average]]
     Verbose = False
-    Indicator Strategy = CD
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Short Period = 10
     Long Period = 21
@@ -166,8 +166,8 @@
   [[MACD]]
     Verbose = False
     # Mike Bruns' agressive 3/11/16 are also recommended
-    # We support both CD and Diff Indicator Strategies
-    Indicator Strategy = CD
+    # We support both Convergence/Divergence and Diff Indicator Strategies
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Short Period = 12
     Long Period = 26
@@ -183,8 +183,8 @@
   [[DMACD]]
     Verbose = False
     # Uses MACD's Long, Short, and Signal values
-    # We support both CD and Diff Indicator Strategies
-    Indicator Strategy = CD
+    # We support both Convergence/Divergence and Diff Indicator Strategies
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Signal Period = 9
     Diff Down = -0.1
@@ -237,7 +237,7 @@
   [[Full Stochastic RSI %D]]
     Verbose = False
     # Full %D uses Fast %D periods, Full %D periods are SMA periods of Fast %D
-    # We support both CD and Diff (standard) Indicator Strategies
+    # We support both Convergence/Divergence and Diff (standard) Indicator Strategies
     Indicator Strategy = Diff
     Period = 3
     Ask = 80
@@ -286,8 +286,8 @@
 
   [[KDJ]]
     Verbose = False
-    # We support both CD and Diff (off J) Indicator Strategies
-    Indicator Strategy = CD
+    # We support both Convergence/Divergence and Diff (off J) Indicator Strategies
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Fast K Period = 9
     Full K Period = 3
@@ -302,9 +302,9 @@
 
   [[Aroon]]
     Verbose = False
-    # We support both CD (when Aroon is > or < 0) and Diff (off bid/ask)
+    # We support both Convergence/Divergence (when Aroon is > or < 0) and Diff (off bid/ask)
     # This is because zero line is where AroonUp and AroonDown converge/diverge
-    Indicator Strategy = CD
+    Indicator Strategy = Convergence/Divergence
     Candle Size Multiplier = 1
     Period = 25
     Bid = -90
