Notifier: WIP IRC PM support

--- a/config.ini
+++ b/config.ini
@@ -71,6 +71,15 @@
     Server = stub
     Port = stub
     Name = Avarice
+  [[IRC]]
+    Simulator = False
+    Trader = False
+    Server = irc.freenode.net
+    Port = 6667
+    NickServ = False
+    Username = AvariceBot
+    Password = stub
+    Recipient = stub
 
 [Database]
   Archive = False
